cabal-version:      2.4
name:               monoid-filter
version:            0.1.0.0
synopsis:           A monoid for modifying or consuming a value

description:
    Functions with the type @(a -> m (Maybe a))@ are endomorphisms in the
    Kleisli category of @MaybeT m@. This means they form a monoid and can be
    chained together. The most common use for these is to create a series of
    (effectful) filters which may modify their input, consume their input, or
    pass their input along unmodified.


homepage:           https://github.com/hololeap/monoid-filter
bug-reports:        https://github.com/hololeap/monoid-filter/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Control, Data
extra-source-files: README.md, CHANGELOG.md

library
    exposed-modules:  Data.Monoid.Filter
                    , Data.Monoid.Filter.Pure

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>=4.14.1.0
        , transformers ^>=0.5.6.2
        , monoid-extras ^>=0.5.1

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat
